liikunta-287: card keywords z-index fix

--- a/src/common/components/card/card.module.scss
+++ b/src/common/components/card/card.module.scss
@@ -139,7 +139,7 @@
     align-items: flex-end;
     flex-wrap: wrap;
     position: relative;
-    z-index: 100;
+    z-index: 1;
     height: max-content;
     align-self: flex-end;
 
